--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <html>
     <head>
-        <title>Visual Studio Code</title>
+        <title>Visual Studio Code - Code Editor</title>
     </head>
     <body>
+       <span>
         <h1>Welcome to my website</h1>
+       </span> 
+       <span>
+        <b>My name is John Doe</b>
+         </span>
     </body>
