--- a/index.html
+++ b/index.html
@@ -1,12 +1,32 @@
 <html>
-    <head>
-        <title>Visual Studio Code - Code Editor</title>
-    </head>
-    <body>
-       <span>
-        <h1>Welcome to my website</h1>
-       </span> 
-       <span>
-        <b>My name is John Doe</b>
-         </span>
-    </body>
+	<title>
+		Visual Studio Code - Code Editor
+	</title>
+</html>
+<body>
+	<div>
+		<span>Visual Studio Code</span>
+		<a href="/">Docs</span> 
+		<a href="/">Updates</span> 
+		<a href="/">Blog</span> 
+		<a href="/">API</span> 
+		<a href="/">Extensions</span> 
+		<a href="/">FAQ</span>
+		<a href="/">GitHub Copilot</span>
+		
+		<input type="text" placeholder="Search Docs">
+		<button>Download</button>
+	</div>
+	<br/>
+
+	<div>
+		<h1>Your code editor.</h1>
+        <h1>Redefined with AI.</h1>
+
+        <button>Download for macOS</button> <button>Try agent mode</button>
+        <br/>
+        <a href="/">Web,</a> <a href="/">Insiders edition,</a> or <a href="/"> other platforms </a>
+	</div>
+
+	<br/>
+</body>
