--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 	<title>
 		Visual Studio Code - Code Editor
 	</title>
+    <link rel="stylesheet" href="style.css">
 </html>
 <body>
-	<div>
-		<span>Visual Studio Code</span>
+	<div style="color: white; padding-left: 500px; padding-right: 500px; padding-top: 20px;">
+        
+		<span style="font-size: 20; color: white; font-weight: 550;">Visual Studio Code</span>
 		<a href="/">Docs</span> 
 		<a href="/">Updates</span> 
 		<a href="/">Blog</span> 
@@ -16,7 +18,8 @@
 		
 		<input type="text" placeholder="Search Docs">
 		<button>Download</button>
-	</div>
+	
+    </div>
 	<br/>
 
 	<div>
@@ -27,6 +30,14 @@
         <br/>
         <a href="/">Web,</a> <a href="/">Insiders edition,</a> or <a href="/"> other platforms </a>
 	</div>
-
-	<br/>
+     <br/>
+     <div>
+        
+        <img width="1240" height="831" role="presentation" src="/assets/hero-background.webp" alt="">
+    </div>
+        </div>
+        <br/>
+        <div>
+            <h4>Replay</h4>
+        </div>
 </body>
