--- a/index.html
+++ b/index.html
@@ -1,43 +1,130 @@
-<html>
-	<title>
-		Visual Studio Code - Code Editor
-	</title>
-    <link rel="stylesheet" href="style.css">
-</html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Visual Studio Code - Code Editor</title>
+  <link rel="stylesheet" href="style.css" />
+  <style>
+    body {
+      margin: 0;
+      background-color: #0e1013;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+        Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+      color: white;
+      text-align: center;
+    }
+    .navbar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 20px 80px;
+    }
+    .nav-left {
+      display: flex;
+      align-items: center;
+      gap: 15px;
+      font-weight: 500;
+    }
+    .nav-left img {
+      width: 24px;
+    }
+    .nav-right input {
+      padding: 6px 10px;
+      border-radius: 4px;
+      border: none;
+    }
+    .nav-right button {
+      background-color: #007acc;
+      border: none;
+      padding: 8px 16px;
+      color: white;
+      font-weight: bold;
+      margin-left: 10px;
+      border-radius: 4px;
+    }
+    .hero h1 {
+      font-size: 3rem;
+      margin: 0;
+      font-weight: bold;
+    }
+    .hero {
+      padding: 50px 20px 20px;
+    }
+    .hero-buttons button {
+      background-color: #007acc;
+      color: white;
+      padding: 12px 20px;
+      border: none;
+      margin: 15px 10px;
+      font-size: 1rem;
+      border-radius: 4px;
+      font-weight: 600;
+    }
+    .hero-buttons a {
+      color: #3ea6ff;
+      margin: 0 5px;
+      text-decoration: none;
+      font-size: 0.9rem;
+    }
+    .media-container {
+      display: flex;
+      justify-content: center;
+      margin-top: 20px;
+    }
+    .media-container video {
+      max-width: 80%;
+      border-radius: 12px;
+    }
+    h4 {
+      margin-top: 30px;
+      font-weight: normal;
+    }
+  </style>
+</head>
 <body>
-	<div style="color: white; padding-left: 500px; padding-right: 500px; padding-top: 20px;">
-        
-		<span style="font-size: 20; color: white; font-weight: 550;">Visual Studio Code</span>
-		<a href="/">Docs</span> 
-		<a href="/">Updates</span> 
-		<a href="/">Blog</span> 
-		<a href="/">API</span> 
-		<a href="/">Extensions</span> 
-		<a href="/">FAQ</span>
-		<a href="/">GitHub Copilot</span>
-		
-		<input type="text" placeholder="Search Docs">
-		<button>Download</button>
-	
+  <!-- Navigation -->
+  <div class="navbar">
+    <div class="nav-left">
+      <img src="https://code.visualstudio.com/assets/favicon.ico" alt="VS Code Logo" />
+      <span style="font-size: 20px;">Visual Studio Code</span>
+      <span class="toplink">Docs</span>
+      <span class="toplink">Updates</span>
+      <span class="toplink">Blog</span>
+      <span class="toplink">API</span>
+      <span class="toplink">Extensions</span>
+      <span class="toplink">FAQ</span>
+      <span class="toplink">GitHub Copilot</span>
     </div>
-	<br/>
-
-	<div>
-		<h1>Your code editor.</h1>
-        <h1>Redefined with AI.</h1>
-
-        <button>Download for macOS</button> <button>Try agent mode</button>
-        <br/>
-        <a href="/">Web,</a> <a href="/">Insiders edition,</a> or <a href="/"> other platforms </a>
-	</div>
-     <br/>
-     <div>
-        
-        <img width="1240" height="831" role="presentation" src="/assets/hero-background.webp" alt="">
+    <div class="nav-right">
+      <input type="text" placeholder="Search Docs" />
+      <button>Download</button>
     </div>
-        </div>
-        <br/>
-        <div>
-            <h4>Replay</h4>
-        </div>
+  </div>
+
+  <!-- Hero Section -->
+  <div class="hero">
+    <h1>Your code editor.</h1>
+    <h1>Redefined with AI.</h1>
+    <div class="hero-buttons">
+      <button>Download for macOS</button>
+      <button>Try agent mode</button>
+      <br />
+      <a href="#">Web,</a>
+      <a href="#">Insiders edition,</a>
+      <a href="#">other platforms</a>
+    </div>
+  </div>
+
+  <!-- Media -->
+  <div class="media-container">
+    <video autoplay muted loop>
+      <source src="/assets/Hero Dark Large.webm" type="video/webm" />
+      Your browser does not support the video tag.
+    </video>
+  </div>
+
+  <!-- Replay Section -->
+  <h4>Replay</h4>
 </body>
+</html>
